# mercury

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md
config/: definitions.lua  goods.lua  jobs.lua
src/: agentmanager.cpp  agentmanager.h  config.h  configloader.cpp  configloader.h  consumptionsystem.cpp  consumptionsystem.h  definitions.h  main.cpp  marketsystem.cpp  marketsystem.h  productionsystem.cpp  productionsystem.h  simulation.cpp  simulation.h  simulationmanager.cpp  simulationmanager.h  statistics.h  statsmanager.cpp  statsmanager.h
src/utility/: logger.cpp
src/visualizer/: visualizer.py
test/: agentmanagertests.cpp  consumptionsystemtests.cpp  productionsystemtests.cpp  simulationstub.h  test.cpp  testconfig.h
